added menu and logo

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,91 @@
-ul {
-  list-style: none; /*убираем маркеры списка*/
-  margin: 0; /*убираем верхнее и нижнее поле, равное 1em*/
-  padding-left: 0; /*убираем левый отступ, равный 40px*/
+.menu-main {
+  list-style: none;
+  margin: 40px 0 5px;
+  padding: 25px 0 5px;
+  text-align: center;
+  background: rgb(236, 27, 27);
 }
-a {
-  text-decoration: none; /*убираем подчеркивание текста ссылок*/
+.menu-main li {
+  display: inline-block;
+}
+.menu-main li:after {
+  content: "|";
+  color: #606060;
+  display: inline-block;
+  vertical-align: top;
+}
+.menu-main li:last-child:after {
+  content: none;
+}
+.menu-main a {
+  text-decoration: none;
+  font-family: "Ubuntu Condensed", sans-serif;
+  letter-spacing: 2px;
+  position: relative;
+  padding-bottom: 20px;
+  margin: 0 34px 0 30px;
+  font-size: 17px;
+  text-transform: uppercase;
+  display: inline-block;
+  transition: color 0.2s;
+}
+.menu-main a,
+.menu-main a:visited {
+  color: #9d999d;
+}
+.menu-main a.current,
+.menu-main a:hover {
+  color: #f58844;
+}
+.menu-main a:before,
+.menu-main a:after {
+  content: "";
+  position: absolute;
+  height: 4px;
+  top: auto;
+  right: 50%;
+  bottom: -5px;
+  left: 50%;
+  background: #fa8c48;
+  transition: 0.8s;
+}
+.menu-main a:hover:before,
+.menu-main .current:before {
+  left: 0;
+}
+.menu-main a:hover:after,
+.menu-main .current:after {
+  right: 0;
+}
+@media (max-width: 550px) {
+  .menu-main {
+    padding-top: 0;
+  }
+  .menu-main li {
+    display: block;
+  }
+  .menu-main li:after {
+    content: none;
+  }
+  .menu-main a {
+    padding: 25px 0 20px;
+    margin: 0 30px;
+  }
+}
+
+.logo_div {
+  background: black;
+  height: 100px;
+  width: 200px;
+}
+
+.logo_a {
+  font-size: 25px;
+  display: block;
+  text-decoration: none;
+  color: white;
+  margin: 10px;
+  padding: 25px;
+  height: 50px;
+  width: 100px;
 }
