--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 .menu-main {
   list-style: none;
-  margin: 40px 0 5px;
   padding: 25px 0 5px;
   text-align: center;
   background: rgb(236, 27, 27);
@@ -35,7 +34,7 @@
 }
 .menu-main a.current,
 .menu-main a:hover {
-  color: #f58844;
+  color: #551fe9;
 }
 .menu-main a:before,
 .menu-main a:after {
@@ -46,7 +45,7 @@
   right: 50%;
   bottom: -5px;
   left: 50%;
-  background: #fa8c48;
+  background: #000000;
   transition: 0.8s;
 }
 .menu-main a:hover:before,
@@ -80,12 +79,12 @@
 }
 
 .logo_a {
-  font-size: 25px;
+  font-size: 45px;
   display: block;
   text-decoration: none;
   color: white;
   margin: 10px;
   padding: 25px;
-  height: 50px;
-  width: 100px;
+  height: 60px;
+  width: 115px;
 }
