--- a/css/styles.css
+++ b/css/styles.css
@@ -1,90 +1,3 @@
-.menu-main {
-  list-style: none;
-  padding: 25px 0 5px;
-  text-align: center;
-  background: rgb(236, 27, 27);
-}
-.menu-main li {
-  display: inline-block;
-}
-.menu-main li:after {
-  content: "|";
-  color: #606060;
-  display: inline-block;
-  vertical-align: top;
-}
-.menu-main li:last-child:after {
-  content: none;
-}
-.menu-main a {
-  text-decoration: none;
-  font-family: "Ubuntu Condensed", sans-serif;
-  letter-spacing: 2px;
-  position: relative;
-  padding-bottom: 20px;
-  margin: 0 34px 0 30px;
-  font-size: 17px;
-  text-transform: uppercase;
-  display: inline-block;
-  transition: color 0.2s;
-}
-.menu-main a,
-.menu-main a:visited {
-  color: #9d999d;
-}
-.menu-main a.current,
-.menu-main a:hover {
-  color: #551fe9;
-}
-.menu-main a:before,
-.menu-main a:after {
-  content: "";
-  position: absolute;
-  height: 4px;
-  top: auto;
-  right: 50%;
-  bottom: -5px;
-  left: 50%;
-  background: #000000;
-  transition: 0.8s;
-}
-.menu-main a:hover:before,
-.menu-main .current:before {
-  left: 0;
-}
-.menu-main a:hover:after,
-.menu-main .current:after {
-  right: 0;
-}
-@media (max-width: 550px) {
-  .menu-main {
-    padding-top: 0;
-  }
-  .menu-main li {
-    display: block;
-  }
-  .menu-main li:after {
-    content: none;
-  }
-  .menu-main a {
-    padding: 25px 0 20px;
-    margin: 0 30px;
-  }
-}
-
-.logo_div {
-  background: black;
-  height: 100px;
-  width: 200px;
-}
-
-.logo_a {
-  font-size: 45px;
-  display: block;
-  text-decoration: none;
-  color: white;
-  margin: 10px;
-  padding: 25px;
-  height: 60px;
-  width: 115px;
+body {
+  background: white;
 }
