--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,43 @@
-body {
-  background: white;
+.main-logo {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  color: black;
+}
+
+span {
+  color: #2196f3;
+}
+
+a {
+  text-decoration: none;
+  color: #212121;
+}
+
+.footer-logo {
+  color: white;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.nav-list .nav-li {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.nav-list .nav-li:hover a {
+  color: #2196f3;
 }
