--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+/* html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+} */
 /* Основная политра
 Основной цвет текста-#757575 
 Цвет заголовков-#212121
@@ -12,21 +21,22 @@
 }
 /* Общие стили */
 body {
-  margin: 0px;
-  padding: 0px;
+  /* margin: 0px; */
   background: var(--signature-color);
   color: var(--main-text-color);
+
   font-family: Roboto, sans-serif;
   font-weight: 400;
 }
 /* логотип вначале сьраницы */
 .main-logo {
+  color: black;
+
   font-family: Raleway;
   font-weight: 700;
   font-size: 24px;
   line-height: 1.2;
   letter-spacing: 0.03em;
-  color: black;
 }
 /* часть логотипа "Web" */
 span {
@@ -41,10 +51,13 @@ a {
 /* все списки */
 ul {
   list-style-type: none;
+  margin: 0px;
+  padding: 0px;
 }
 /* стили для агаловков */
 .heading {
   color: var(--header-color);
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -54,25 +67,28 @@ ul {
 /*  */
 
 .main-heading {
+  color: var(--header-color);
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.2;
   letter-spacing: 0.03em;
-  color: var(--header-color);
 }
 
 .small-heading {
+  color: var(--header-color);
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
   /* identical to box height */
   letter-spacing: 0.03em;
-  color: var(--header-color);
 }
 
 /* Логотип в конце страницы */
 .footer-logo {
   color: var(--signature-color);
+
   font-family: Raleway;
   font-weight: 700;
   font-size: 24px;
@@ -81,11 +97,13 @@ ul {
 }
 /* основная навигация */
 .site-nav .link {
+  color: var(--header-color);
+
   font-weight: 500;
   font-size: 18px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: var(--header-color);
+
   text-transform: uppercase;
 }
 /* основная навигация при наведении */
@@ -100,11 +118,12 @@ ul {
 
 /*  навигация по контактам */
 .contacts-nav .link {
+  color: var(--main-text-color);
+
   font-weight: 500;
   font-size: 18px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: var(--main-text-color);
 }
 /* навигация по контактам при наведении */
 .contacts-nav .link:hover,
@@ -114,13 +133,22 @@ ul {
 /* "кнопки" */
 
 .button {
+  display: inline-block;
+  min-width: 200px;
+  padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  border-radius: 4px;
+  border: 1px solid var(--animation-color);
+
   color: var(--signature-color);
   background: var(--animation-color);
+
   font-weight: 700;
   font-size: 16px;
   line-height: 1.2;
   letter-spacing: 0.06em;
-  text-align: center;
   font-family: inherit;
 }
 
@@ -132,6 +160,7 @@ ul {
 /* обращения */
 .join {
   color: var(--signature-color);
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -140,10 +169,11 @@ ul {
 }
 
 .address {
+  color: var(--signature-color);
+
   font-size: 14px;
   line-height: 1.2;
   letter-spacing: 0.03em;
-  color: var(--signature-color);
 }
 
 .contact-link {
@@ -154,26 +184,73 @@ ul {
 }
 
 /* Стили к index.html */
+.header-nav {
+  width: 1600px;
+  /* delete */
+  background-color: lightcoral;
+}
+.nav-container {
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  /* delete */
+  outline: 3px solid green;
+}
+
+.link-studio {
+  min-width: 49px;
+}
+
+.link-portfolio {
+  min-width: 77px;
+}
+
+.link-contacts {
+  min-width: 68px;
+}
+
+.link-email {
+  min-width: 135px;
+}
+
+.link-tel {
+  min-width: 122px;
+}
+
+.hero {
+  text-align: center;
+}
 
 /* главный заголовок сайта */
-.hero {
+.hero-title {
+  margin-top: 0px;
+  margin-bottom: 30px;
+  width: 696px;
+  margin-left: auto;
+  margin-right: auto;
+
+  color: var(--signature-color);
+  /* delete */
+  background-color: gray;
+
   font-weight: 900;
   font-size: 26px;
   line-height: 1.2;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--signature-color);
-  background-color: gray;
 }
 /* абзацы в разделе что мы делаем */
 .what-doing-words {
   color: var(--signature-color);
   background: rgba(47, 48, 58, 0.8);
+  text-align: center;
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  text-align: center;
+
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
@@ -199,6 +276,7 @@ ul {
 /* кнопки */
 .button-portfolio {
   background: var(--main-bg-color-button);
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
@@ -218,10 +296,9 @@ ul {
 .paragraph {
   background: rgba(33, 150, 243, 0.9);
   color: var(--signature-color);
+
   font-size: 18px;
   line-height: 1.2;
-  /* or 156% */
-
   letter-spacing: 0.03em;
 }
 
@@ -234,10 +311,9 @@ ul {
 }
 
 .main-paragraph {
+  color: var(--main-text-color);
+
   font-size: 16px;
   line-height: 1.2;
-  /* identical to box height, or 187% */
-
   letter-spacing: 0.03em;
-  color: var(--main-text-color);
 }
