finished margin and padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
   --signature-color: #ffffff;
   --animation-color: #2196f3;
   --main-bg-color-button: #f5f4fa;
+  --logo-border-color: #afb1b8;
 }
 /* Общие стили */
 body {
@@ -28,16 +29,7 @@ body {
   font-family: Roboto, sans-serif;
   font-weight: 400;
 }
-/* логотип вначале сьраницы */
-.main-logo {
-  color: black;
 
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-}
 /* часть логотипа "Web" */
 span {
   color: var(--animation-color);
@@ -54,17 +46,33 @@ ul {
   margin: 0px;
   padding: 0px;
 }
-/* стили для агаловков */
-.heading {
-  color: var(--header-color);
 
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
+
+/* стили для агаловков */
+
 /*  */
+
+/* логотип вначале сьраницы */
+.main-logo {
+  min-width: 153px;
+  color: black;
+
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+}
 
 .main-heading {
   color: var(--header-color);
@@ -85,16 +93,6 @@ ul {
   letter-spacing: 0.03em;
 }
 
-/* Логотип в конце страницы */
-.footer-logo {
-  color: var(--signature-color);
-
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-}
 /* основная навигация */
 .site-nav .link {
   color: var(--header-color);
@@ -152,51 +150,17 @@ ul {
   font-family: inherit;
 }
 
-/* подвал сайта */
-
-.footer {
-  background: #2f303a;
-}
-/* обращения */
-.join {
-  color: var(--signature-color);
-
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-
-.address {
-  color: var(--signature-color);
-
-  font-size: 14px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-}
-
-.contact-link {
-  font-size: 14px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
 /* Стили к index.html */
-.header-nav {
-  width: 1600px;
-  /* delete */
-  background-color: lightcoral;
-}
-.nav-container {
-  width: 1230px;
+
+.container {
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
+  padding-top: 94px;
   margin-left: auto;
   margin-right: auto;
   /* delete */
-  outline: 3px solid green;
+  /* outline: 3px solid green; */
 }
 
 .link-studio {
@@ -221,6 +185,7 @@ ul {
 
 .hero {
   text-align: center;
+  padding-bottom: 94px;
 }
 
 /* главный заголовок сайта */
@@ -241,8 +206,90 @@ ul {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
-/* абзацы в разделе что мы делаем */
+
+.section {
+  padding-bottom: 94px;
+}
+
+.advantages-container {
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.advantages {
+  width: 270px;
+  background: var(--main-bg-color-button);
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+
+.advantages-paragraph {
+  margin-top: 0px;
+  width: 270px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+}
+
+/* фотки наших примуществ */
+.attention-to-detail {
+  padding: 25px 102px;
+}
+
+.punctuality {
+  padding: 25px 102px;
+}
+
+.planning {
+  padding: 25px 100px;
+}
+
+.modern-technologies {
+  padding: 30px 115px 29px 100px;
+}
+
+.advantages-title {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  width: 270px;
+
+  color: var(--header-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.what-doing-title {
+  min-width: 376px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+
+  color: var(--header-color);
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+/*  Что мы делаем*/
 .what-doing-words {
+  padding: 27px 82px 27px 83px;
+  width: 370px;
+  margin-top: 0px;
+
   color: var(--signature-color);
   background: rgba(47, 48, 58, 0.8);
   text-align: center;
@@ -255,14 +302,192 @@ ul {
   text-transform: uppercase;
 }
 
-.advantages-paragraph {
-  font-size: 18px;
-  line-height: 1.2;
+/* Наша команда */
+
+.team-title {
+  min-width: 264px;
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+
+  color: var(--header-color);
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.team-img {
+  margin-bottom: 30px;
+}
+
+.name {
+  width: 270px;
+  margin-bottom: 10px;
+
+  color: var(--header-color);
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
   letter-spacing: 0.03em;
 }
 
 .job {
+  width: 270px;
+  margin-bottom: 16px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
   font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+/* Клиенты */
+
+.always-clients-title {
+  min-width: 390px;
+  margin-bottom: 50px;
+  margin-right: auto;
+  margin-left: auto;
+
+  color: var(--header-color);
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.logo-ya-co {
+  width: 170px;
+  height: 90px;
+  border: 1px solid var(--logo-border-color);
+  padding: 20px 63px 21px 63px;
+}
+
+.logo-company-second {
+  width: 170px;
+  height: 90px;
+  border: 1px solid var(--logo-border-color);
+  padding: 19px 65px;
+}
+
+.logo-company-third {
+  width: 170px;
+  height: 90px;
+  border: 1px solid var(--logo-border-color);
+  padding: 24px 64px 23px 65px;
+}
+
+.logo-foster {
+  width: 170px;
+  height: 90px;
+  border: 1px solid var(--logo-border-color);
+  padding: 24px 45px;
+}
+
+.logo-brand {
+  width: 170px;
+  height: 90px;
+  border: 1px solid var(--logo-border-color);
+  padding: 22px 55px 21px 56px;
+}
+
+.logo-tag {
+  width: 170px;
+  height: 90px;
+  border: 1px solid var(--logo-border-color);
+  padding: 22px 41px 23px 41px;
+}
+/* footer */
+.footer-container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  /* delete */
+  /* outline: 3px solid green; */
+}
+
+/* Логотип в конце страницы */
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 20px;
+  min-width: 153px;
+
+  color: var(--signature-color);
+
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+}
+
+.contact-link {
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.contact-link-com {
+  margin-bottom: 9px;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.contact-link-tel {
+  /* margin-bottom: 9px; */
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+/* обращения */
+.join {
+  min-width: 145px;
+  padding-bottom: 20px;
+  color: var(--signature-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+/* подвал сайта */
+
+.footer {
+  background: #2f303a;
+}
+
+.address {
+  margin-bottom: 9px;
+
+  color: var(--signature-color);
+
+  font-size: 14px;
   line-height: 1.2;
   letter-spacing: 0.03em;
 }
@@ -274,6 +499,39 @@ ul {
    Начальный цвет кнопки - #f5f4fa */
 
 /* кнопки */
+.main-button-portfolio {
+  min-width: 73px;
+
+  background: var(--main-bg-color-button);
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.03em;
+  font-family: inherit;
+}
+
+.button-web-site {
+  min-width: 128px;
+  padding: 6px 22px;
+}
+
+.button-applications {
+  min-width: 145px;
+  padding: 6px 22px;
+}
+
+.button-design {
+  min-width: 103px;
+  padding: 6px 22px;
+}
+
+.button-marketing {
+  min-width: 130px;
+  padding: 6px 22px;
+}
+
 .button-portfolio {
   background: var(--main-bg-color-button);
 
@@ -292,6 +550,10 @@ ul {
   background: var(--animation-color);
 }
 
+.portfolio-img {
+  margin-bottom: 20px;
+}
+
 /* абзацы */
 .paragraph {
   background: rgba(33, 150, 243, 0.9);
@@ -303,6 +565,9 @@ ul {
 }
 
 .heading-portfolio {
+  min-width: 332px;
+  margin-bottom: 4px;
+
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
